# trans

./: trans.cabal
app/: Main.hs
