name:                trans
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bergmark/trans#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable trans-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base
    , MonadRandom
    , bytestring
    , safe
    , mtl
    , random
    , text
    , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bergmark/trans
